--- a/wdd130/mywebsite/styles/styles.css
+++ b/wdd130/mywebsite/styles/styles.css
@@ -64,23 +64,60 @@ footer {
   color: var(--paragraph-color-on-color);
   background-color: black;
   padding: 25px 50px; margin-top: 0;  
-  display: flex; 
+  display: grid; 
+  grid-template-columns: 1fr 8fr 1fr ;
   justify-content: space-around; 
   align-items: center;    
-  
 }
 footer img { 
   width: 25px;  
   
+}
+.gamebox{
+  border: solid #2E6CA4 5px;
+  display: grid;
+  grid-column: 1fr;
+  border-radius: 2px;
 }
 p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-background-color);
   padding: 1em;
 }
+.game-grid p{
+  color: #2E6CA4;
+  align-items: center;
+  display: grid;
+  grid-column: 9fr;
+  justify-content: center;
+}
+.game-grid{
+  display: grid;
+  grid-template-columns: 1fr 9fr;
+  background-color: black;
+  border: 12px;
+}
+.business{
+  margin: auto;
+  background: #381D2A;
+  border: 2em;
+
+  padding: 20px;
+  margin: 20px
+}
+.business p{
+  color: #A42212;
+}
+.empty-space{
+  padding: 2em; 
+}
+.game-grid:hover{
+
+  transform: scale(1.01);
+}
 #information { 
   font-size: 1em;   
-  color: rgb(255, 255, 255);  
+  color: rgb(255, 255, 255);
 }
 .colors {
   width: 100%;
@@ -128,41 +165,19 @@ nav a {
   text-decoration: none;
   padding: 10px;
 }
+.join{
+  background-color: #A42212;  
+  color: #381D2A;
+  text-decoration: none; 
+  padding: 15px;  
+  box-shadow: 2px 6px 12px #000000;  
+}
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
 }
 nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
-}
-.sitemap {
-  display: grid;
-  justify-content: center;
-
-  grid-template-columns: repeat(6, 15%);
-  grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas: ". . home home . ."
-    ". . . top . ."
-    ". left left right right ."
-    "page2 page2 . . page3 page3";
-}
-.sitemap > div {
-  text-align: center;
-}
-.sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
 }
 .top {
   grid-area: top;
