--- a/wdd130/mywebsite/styles/styles.css
+++ b/wdd130/mywebsite/styles/styles.css
@@ -85,6 +85,65 @@ footer img {
   display: grid;
   grid-template-columns: 9fr 1fr;
 }
+.sidenav{
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 310px;
+  height: 310px;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #000000;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #381D2A;
+  color: #E3BD61;
+  transform: rotateY(180deg);
+}
 .yellow
 {
   border: solid #E3BD61 5px;
@@ -108,6 +167,7 @@ p {
 
 .home-click,.game-grid{
   display: grid;
+  height: 100%;
   grid-template-columns: 1fr 9fr;
   background-color: black;
   border: 12px;
